# agentcore-cli

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  README.md  create-bundle.mjs  esbuild.config.mjs  eslint.config.mjs  package-lock.json  package.json  vitest.config.ts
.omc/: project-memory.json
browser-tests/: fixtures.ts  global-setup.ts  global-teardown.ts  playwright.config.ts
docs/: BUGBASH-TS-STATUS.md  PERMISSIONS.md  TESTING.md  TYPESCRIPT_SUPPORT_HANDOFF.md  TYPESCRIPT_SUPPORT_PROGRESS.md  TYPESCRIPT_SUPPORT_TEST_PLAN.md  TYPESCRIPT_SUPPORT_TEST_PLAN_RESULTS.md  commands.md  configuration.md  container-builds.md  evo-bug-bash.md  evo-cli-equivalents.md  evo-dev-tarball-test-results.md  frameworks.md  harness.md  memory.md  transaction_search.md  tui-harness.md
e2e-tests/: README.md  ab-test-config-bundle.test.ts  ab-test-target-based.test.ts  archive-lifecycle.test.ts  byo-custom-jwt.test.ts  config-bundle-eval-rec.test.ts  copilotkit-frontend.test.ts  dev-lifecycle.test.ts  e2e-helper.ts  evals-lifecycle.test.ts  import-resources.test.ts  ts-strands-bedrock.test.ts  ts-vercelai-bedrock.test.ts
integ-tests/: README.md  add-agent-auth.test.ts  create-edge-cases.test.ts  create-frameworks.test.ts  create-protocols.test.ts  create-with-agent.test.ts  json-output.test.ts  lifecycle-config.test.ts  schema-injection.test.ts
schemas/: agentcore.schema.v1.json
scripts/: bundle.mjs  check-old-cli.lib.mjs  check-old-cli.mjs  copy-assets.mjs  generate-schema.mjs  run-e2e-local.sh  (+1 more)
src/assets/python/mcp/standalone/base/: README.md  main.py  pyproject.toml
(+493 files in other folders)
